--- a/.github/workflows/test_app.yml
+++ b/.github/workflows/test_app.yml
@@ -15,5 +15,5 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pip install pytest pytest-cov
+        pip install pytest pytest-cov flask
         pytest test_app.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml 
