--- a/.github/workflows/test_app.yml
+++ b/.github/workflows/test_app.yml
@@ -13,6 +13,9 @@ jobs:
     - name: Check Out Repository
       uses: actions/checkout@v2
 
+    - name: Install python-dotenv
+      run: pip install python-dotenv
+
     - name: Test with pytest
       run: |
         pip install pytest pytest-cov flask
