--- a/.github/workflows/test_app.yml
+++ b/.github/workflows/test_app.yml
@@ -13,7 +13,10 @@ jobs:
     - name: Check Out Repository
       uses: actions/checkout@v2
 
+    - name: Install python-dotenv
+      run: pip install python-dotenv
+
     - name: Test with pytest
       run: |
-        pip install pytest pytest-cov
-        pytest test_app.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml 
+        pip install pytest pytest-cov flask
+        pytest test_app.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml
